--- a/django_project/frontend/src/pages/Dashboard/MiddlePanel/GlobalDateSelector/style.scss
+++ b/django_project/frontend/src/pages/Dashboard/MiddlePanel/GlobalDateSelector/style.scss
@@ -219,6 +219,7 @@
   .UpperFloating {
     width: 100%;
     display: flex;
+    justify-content: center;
   }
 }
 
